--- a/static/app/index.html
+++ b/static/app/index.html
@@ -127,7 +127,7 @@
                 Crypto 101 is available for everyone, for free,
                 forever.  Development is
                 hosted <a href="https://github.com/crypto101">on
-                Github</a>, funded by free time and your
+                GitHub</a>, funded by free time and your
                 donations. You are free to donate any amount you want,
                 and all donations are of course entirely
                 voluntary. The easiest way to donate is through
